getAllNeedies endpoint changed
